[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.9",
    "django-routers>=0.2",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.99.9",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.7",
    "supabase>=2.18.1",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]
